--- a/src/app/Components/Contents/contents.module.css
+++ b/src/app/Components/Contents/contents.module.css
@@ -29,6 +29,32 @@
   margin-top: 3rem;
 }
 
+@media (max-width: 1800px) {
+  .contents {
+    padding: 0 0 0 5.4vw;
+  }
+}
+
+@media (max-width: 1536px) {
+  .contents {
+    padding: 0 0 0 5.8vw;
+  }
+
+  .description {
+    margin-top: 28rem;
+  }
+
+  .buttons {
+    margin-top: 1.5rem;
+  }
+
+  .hero-image {
+    right: -20rem;
+    max-width: 60rem;
+  }
+  
+}
+
 /* Laptop */
 @media (max-width: 1280px) {
   .contents {
@@ -52,7 +78,7 @@
 /* Tablet */
 @media (min-width: 768px) and (max-width: 1024px) {
   .contents {
-    padding: 0 0 0 3vw;
+    padding: 5vh 0 0 1vw;
     grid-template-columns: 60% 40%;
   }
 
@@ -67,8 +93,9 @@
   }
   
   .hero-image {
-    right: -25rem;
-    max-width: 50rem;
+    top: 5rem;
+    right: -42rem;
+    max-width: 60rem;
   }
   
   .buttons {
