Responsive and functionality fixes 3

--- a/src/app/Components/Footer/ModernFooter.module.css
+++ b/src/app/Components/Footer/ModernFooter.module.css
@@ -281,6 +281,12 @@
     color: #fff;
 }
 
+.webmaakLink {
+    color: #fff;
+    text-decoration: none;
+}
+
+
 /* Responsive styles */
 @media (max-width: 1200px) {
     .linksSection {
