--- a/src/app/Components/ToggleNav/toggleNav.module.css
+++ b/src/app/Components/ToggleNav/toggleNav.module.css
@@ -249,16 +249,16 @@
 }
 
 .subItem {
+  width: fit-content;
   color: #111827;
   padding: 12px;
   cursor: pointer;
   font-weight: 500;
   transition: background 0.2s;
   display: block;
-  width: 100%;
   text-decoration: none;
 }
 
 .subItem:hover {
-  background: #e0e7ff;
+  background: #69003533;
 }
