--- a/src/app/Components/WhatWeDo/NewWhatWeDo.module.css
+++ b/src/app/Components/WhatWeDo/NewWhatWeDo.module.css
@@ -941,8 +941,10 @@
     }
     
     .buttonContainer {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
       align-items: center;
-      gap: 0.75rem;
+      gap: 0;
       margin-top: 2rem;
     }
     
