--- a/src/app/Components/Button/button.module.css
+++ b/src/app/Components/Button/button.module.css
@@ -47,6 +47,7 @@
   cursor: pointer;
   color: #fff;
   background-color: rgba(255, 255, 255, 0.25);
+  display: flex;
 }
 
 .whiteButtonWithBackground:hover .arrow {
@@ -55,7 +56,7 @@
 }
 
 .whiteButtonNoBackground {
-  padding: 0.5rem 0.75rem;
+  padding: 0.5rem 1rem;
   font-size: 0.875rem;
   font-weight: 600;
   font-style: normal;
@@ -64,8 +65,8 @@
   border-radius: 10rem;
   border: transparent;
   cursor: pointer;
-  color: #fff;
-  background-color: transparent;
+  color: #ffffff;
+  background-color: #24242463;
 }
 
 .whiteButtonNoBackground:hover .arrow {
@@ -209,4 +210,45 @@
 
 .smallWhatWeDoButton:hover svg {
   transform: translateX(0.351rem);
+}
+
+/* Sign in button css */
+.secondary {
+  background-color: rgba(255, 255, 255, 0.15); /* Slightly more glassy */
+  backdrop-filter: blur(6px);
+  color: white;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  height: 47.5px;
+  font-size: 16px;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 24px;
+  width: fit-content;
+  position: relative;
+}
+
+.secondary:hover {
+  background-color: rgba(255, 255, 255, 0.25);
+}
+
+/* Add arrow via CSS */
+.secondary::after {
+  content: '→'; /* You can change this to any arrow character or Unicode */
+  font-size: 18px;
+  margin-left: 8px;
+  display: inline-block;
+  transition: transform 0.3s ease;
+}
+
+.secondary:hover::after {
+  transform: translateX(3px);
+}
+
+.whiteButtonNoBackground {
+  display: flex;
+  margin-left: .5rem;
 }
