--- a/src/app/Components/admin/SignUpPanel.module.css
+++ b/src/app/Components/admin/SignUpPanel.module.css
@@ -239,6 +239,10 @@
     padding: 14px 20px;
     font-size: 0.95rem;
   }
+  .nameField{
+    display: flex;
+    gap: 10px;
+  }
 }
 
 /* Tablet */
