--- a/src/app/Components/ToggleNav/toggleNav.module.css
+++ b/src/app/Components/ToggleNav/toggleNav.module.css
@@ -52,11 +52,15 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  max-height: 70vh;
+  max-height: 58vh;
   padding-top: 30px;
   background: #f9fafb;
   border-radius: 12px;
   position: relative; /* for fade overlays */
+}
+
+.subMenu{
+  padding-top: 10px;
 }
 
 /* Scroll container wrapper for fades */
@@ -99,7 +103,7 @@
 .menuItem,
 .subItem {
   color: #111827;
-  padding: 12px;
+  padding: 9px 12px;
   cursor: pointer;
   font-weight: 500;
   transition: background 0.2s;
@@ -111,7 +115,7 @@
 }
 
 .backButton {
-  color: #111827;
+  color: #a80038;
   display: flex;
   align-items: center;
   gap: 8px;
@@ -121,6 +125,7 @@
   font-size: 1rem;
   cursor: pointer;
   padding: 0px 24px 16px;
+  margin-bottom: -10px;
 }
 
 .socialIcons a {
@@ -131,13 +136,12 @@
   display: flex;
   align-items: center;
   width: fit-content;
-  gap: 10px;
+  gap: 8px;
 }
 .socialIcons {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 10px;
 }
 
 
@@ -186,7 +190,7 @@
   font-family: "Google Sans",Roboto,Arial,sans-serif;
   font-size: 14px;
   font-weight: 500;
-  height: 48px;
+  height: 36px;
   justify-content: center;
   letter-spacing: .25px;
   line-height: normal;
@@ -200,7 +204,7 @@
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  width: auto;
+  width: 100%;
   will-change: transform,opacity;
   z-index: 0;
 }
