--- a/src/app/Components/admin/AuthPopup.module.css
+++ b/src/app/Components/admin/AuthPopup.module.css
@@ -134,7 +134,7 @@
 }
 
 .btn {
-  padding: 12px 24px;
+  padding: 10px 24px;
   border-radius: 8px;
   font-size: 1rem;
   font-weight: 500;
@@ -145,12 +145,20 @@
   align-items: center;
   justify-content: center;
   gap: 8px;
-  min-height: 48px;
+  min-height: 38px;
+  width: 100%;
 }
 
 .btn:disabled {
   opacity: 0.6;
   cursor: not-allowed;
+}
+
+.forgetPasswordBtn{
+  background: white;
+  border: none;
+  color: rgba(160, 0, 94, 1);
+  padding: 12px 0 0;
 }
 
 .signInBtn {
