--- a/src/app/Components/TrialComponent/ComponentTwelve/ComponentTwelve.module.css
+++ b/src/app/Components/TrialComponent/ComponentTwelve/ComponentTwelve.module.css
@@ -15,7 +15,7 @@
 
 .topAnchorLink {
   font-size: 0.9rem;
-  color: #614efc; /* Purple from the image */
+  color: #b44593; /* Purple from the image */
   text-decoration: none;
   font-weight: 600;
 }
@@ -109,7 +109,7 @@
 }
 
 .checkIcon {
-  color: #614efc; /* Purple checkmark */
+  color: #b44593; /* Purple checkmark */
   margin-right: 0.5rem;
   font-size: 1.1rem;
   line-height: 1;
@@ -145,7 +145,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background: linear-gradient(to top, #614efc, #8b80ed);
+  background: linear-gradient(90deg, #790047ec 0%, #e50076e3 100%);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.08);
   color: #fff;
   text-align: left;
