ITR filling 2 added

--- a/src/app/Components/TrialComponent/ComponentSeven/ComponentSeven.module.css
+++ b/src/app/Components/TrialComponent/ComponentSeven/ComponentSeven.module.css
@@ -3,7 +3,7 @@
   padding: 5rem 2.25rem;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: start;
   max-width: 1400px;
   margin: 0 auto;
   border-radius: .5rem;
