--- a/src/app/Components/TrialComponent/ComponentSeven/ComponentSeven.module.css
+++ b/src/app/Components/TrialComponent/ComponentSeven/ComponentSeven.module.css
@@ -176,8 +176,9 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 20px;
-  height: 20px;
+  min-width: 20px;
+  min-height: 20px;
   font-size: 12px;
+  aspect-ratio: 1/1;
   font-weight: bold;
 } 
