--- a/src/app/Components/NewContactForm/ModernContactForm.module.css
+++ b/src/app/Components/NewContactForm/ModernContactForm.module.css
@@ -472,3 +472,10 @@ textarea.input::-webkit-scrollbar {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 } 
+
+@media screen and (max-width: 1536px) {
+  .wrapper {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
