Modern nav resonsive fix

--- a/src/app/Components/ui/modern-navbar.module.css
+++ b/src/app/Components/ui/modern-navbar.module.css
@@ -411,6 +411,12 @@
   }
 }
 
+@media screen and (max-width: 1536px) {
+  .navLinkText {
+    font-size: .7rem !important;
+  }
+}
+
 .whiteButtonNoBackground.visible {
   color: #111827 !important;
 }
