--- a/src/app/Components/admin/AuthPopup.module.css
+++ b/src/app/Components/admin/AuthPopup.module.css
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.1);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -15,13 +15,14 @@
 .popup {
   background: white;
   border-radius: 12px;
-  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  /* box-shadow: 20px 20px 25px 0px rgba(180, 0, 104, 0.3), 20 20px 20px 20px rgba(180, 0, 104, 0.3); */
+  box-shadow: rgba(180, 0, 104, .25) 0px 48px 100px 0px;
   width: 100%;
   max-width: 400px;
   max-height: 90vh;
   overflow-y: auto;
   animation: slideIn 0.3s ease-out;
-  border: 3px solid #b40068;
+  border: 2px solid #e2e8f0;
 }
 
 @keyframes slideIn {
