--- a/src/app/Components/WhoWeWorkWith/WhoWeWorkWith.module.css
+++ b/src/app/Components/WhoWeWorkWith/WhoWeWorkWith.module.css
@@ -137,6 +137,7 @@
   justify-content: center;
   min-width: 50px;
   height: 50px;
+  color: rgb(136, 9, 58);
   background: linear-gradient(
     135deg,
     rgba(107, 0, 62, 0.2) 0%,
