about page and toggle nav some fixes linter and titledesccnvas compoennt reusable added

--- a/src/app/Components/ToggleNav/toggleNav.module.css
+++ b/src/app/Components/ToggleNav/toggleNav.module.css
@@ -107,6 +107,7 @@
   cursor: pointer;
   font-weight: 500;
   transition: background 0.2s;
+  touch-action: auto;
 }
 
 .menuItem:hover,
@@ -259,7 +260,7 @@
   cursor: pointer;
   font-weight: 500;
   transition: background 0.2s;
-  display: block;
+  display: inline;
   text-decoration: none;
 }
 
