--- a/src/app/Components/CustomAccordion/CustomAccordion.module.css
+++ b/src/app/Components/CustomAccordion/CustomAccordion.module.css
@@ -16,8 +16,8 @@
 }
 
 .theme--dark {
-  background-color: #1a202c;
-  color: #ffffff;
+  background-color: #ffffff;
+  color: #1a202c;
 }
 
 .theme--dark .mainHeading,
@@ -40,7 +40,7 @@
 }
 
 .header {
-  text-align: start;
+  text-align: center;
   margin-bottom: 4rem;
 }
 
@@ -49,7 +49,7 @@
   color: #b44593;
   font-weight: 600;
   margin-bottom: 0.5rem;
-  text-align: left;
+  text-align: center;
   width: 100%;
 }
 
@@ -59,7 +59,7 @@
   color: #1a1a1a;
   margin-bottom: 2rem;
   line-height: 1.2;
-  text-align: left;
+  text-align: center;
   width: 100%;
 }
 
@@ -68,7 +68,7 @@
   color: #4a4a4a;
   line-height: 1.6;
   margin-bottom: 3rem;
-  text-align: left;
+  text-align: center;
   width: 100%;
 }
 
