--- a/src/app/services/income-tax/StartupHero.module.css
+++ b/src/app/services/income-tax/StartupHero.module.css
@@ -291,7 +291,7 @@
     margin-top: 2rem;
     padding-top: 40px;
     min-width: unset;
-    padding: 2rem 1rem 2rem;
+    padding: 2rem 0 2rem;
   }
   .cardStack {
     width: 100vw;
